log/build_2025-03-19_06-45-50/py_pubsub/stdout_stderr.log
running egg_info
writing ../../build/py_pubsub/py_pubsub.egg-info/PKG-INFO
writing dependency_links to ../../build/py_pubsub/py_pubsub.egg-info/dependency_links.txt
writing entry points to ../../build/py_pubsub/py_pubsub.egg-info/entry_points.txt
writing requirements to ../../build/py_pubsub/py_pubsub.egg-info/requires.txt
writing top-level names to ../../build/py_pubsub/py_pubsub.egg-info/top_level.txt
reading manifest file '../../build/py_pubsub/py_pubsub.egg-info/SOURCES.txt'
adding license file 'LICENSE'
writing manifest file '../../build/py_pubsub/py_pubsub.egg-info/SOURCES.txt'
running build
running build_py
copying py_pubsub/fishrec.py -> /home/OSTR/modem_ws2/build/py_pubsub/build/lib/py_pubsub
copying py_pubsub/fishturn.py -> /home/OSTR/modem_ws2/build/py_pubsub/build/lib/py_pubsub
copying py_pubsub/fishtran.py -> /home/OSTR/modem_ws2/build/py_pubsub/build/lib/py_pubsub
running install
running install_lib
copying /home/OSTR/modem_ws2/build/py_pubsub/build/lib/py_pubsub/fishrec.py -> /home/OSTR/modem_ws2/install/py_pubsub/lib/python3.12/site-packages/py_pubsub
copying /home/OSTR/modem_ws2/build/py_pubsub/build/lib/py_pubsub/fishturn.py -> /home/OSTR/modem_ws2/install/py_pubsub/lib/python3.12/site-packages/py_pubsub
copying /home/OSTR/modem_ws2/build/py_pubsub/build/lib/py_pubsub/fishtran.py -> /home/OSTR/modem_ws2/install/py_pubsub/lib/python3.12/site-packages/py_pubsub
byte-compiling /home/OSTR/modem_ws2/install/py_pubsub/lib/python3.12/site-packages/py_pubsub/fishrec.py to fishrec.cpython-312.pyc
byte-compiling /home/OSTR/modem_ws2/install/py_pubsub/lib/python3.12/site-packages/py_pubsub/fishturn.py to fishturn.cpython-312.pyc
  File "/home/OSTR/modem_ws2/install/py_pubsub/lib/python3.12/site-packages/py_pubsub/fishturn.py", line 43
    def local(self)
                   ^
SyntaxError: expected ':'

byte-compiling /home/OSTR/modem_ws2/install/py_pubsub/lib/python3.12/site-packages/py_pubsub/fishtran.py to fishtran.cpython-312.pyc
  File "/home/OSTR/modem_ws2/install/py_pubsub/lib/python3.12/site-packages/py_pubsub/fishtran.py", line 70
    def ack(self)
                 ^
SyntaxError: expected ':'

running install_data
running install_egg_info
removing '/home/OSTR/modem_ws2/install/py_pubsub/lib/python3.12/site-packages/py_pubsub-0.0.0-py3.12.egg-info' (and everything under it)
Copying ../../build/py_pubsub/py_pubsub.egg-info to /home/OSTR/modem_ws2/install/py_pubsub/lib/python3.12/site-packages/py_pubsub-0.0.0-py3.12.egg-info
running install_scripts
Installing fishdepth script to /home/OSTR/modem_ws2/install/py_pubsub/lib/py_pubsub
Installing fishhub script to /home/OSTR/modem_ws2/install/py_pubsub/lib/py_pubsub
Installing fishrec script to /home/OSTR/modem_ws2/install/py_pubsub/lib/py_pubsub
Installing fishspeed script to /home/OSTR/modem_ws2/install/py_pubsub/lib/py_pubsub
Installing fishtran script to /home/OSTR/modem_ws2/install/py_pubsub/lib/py_pubsub
Installing fishturn script to /home/OSTR/modem_ws2/install/py_pubsub/lib/py_pubsub
Installing hub script to /home/OSTR/modem_ws2/install/py_pubsub/lib/py_pubsub
Installing receive script to /home/OSTR/modem_ws2/install/py_pubsub/lib/py_pubsub
Installing transmit script to /home/OSTR/modem_ws2/install/py_pubsub/lib/py_pubsub
writing list of installed files to '/home/OSTR/modem_ws2/build/py_pubsub/install.log'
